--- a/199.html
+++ b/199.html
@@ -60,6 +60,12 @@
 <br>Если вы решили своими силами чинить, то первым делом имеет смысл раздобыть инфу о том, как делать починку трещины на бампере. Для этого стоит воспользоваться любым поисковиком, например, bing, или посмотреть номера журналов типа "Моделист-конструктор" или "Сам себе мастер".
 <br>Надеюсь, что настоящая статья хотя бы чем-нибудь помогла вам сделать починку трещины на бампере. В следующий раз вы сможете узнать о том, как отремонтировать двигатель ваз или dvd rom.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
