--- a/200.html
+++ b/200.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самому делать ремонт, то первым делом необходимо получить инфу о том, как ремонтировать флэшку. Для этой цели стоит воспользоваться mail.ru или гуглом, либо создать тему на соответствующем сообществе.
 <br>Я думаю, что вы не зря потратили свои усилия и эта статья поможет вам решить данную задачу. В следующей статье я напишу о том, как отремонтировать аккордеон либо крышу дома.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
