--- a/203.html
+++ b/203.html
@@ -63,6 +63,12 @@
 <br>Думаю, что данная статья хотя бы чем-то может помочь вам решить эту задачу. В следующей статье я расскажу о том, как отремонтировать сливной бачок унитаза либо аквариум.
 <br>Заходите к нам еще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
