--- a/208.html
+++ b/208.html
@@ -64,6 +64,12 @@
 <br>Я думаю, что вы не зря потратили время и эта статья может помочь вам отремонтировать картридж canon. В следующей статье я расскажу о том, как отремонтировать смеситель в ванной или смеситель в ванной.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
