--- a/226.html
+++ b/226.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы приняли решение самому заниматься починкой, то первым делом надо узнать о том, как заниматься ремонтом двигателя. Для этого можно воспользоваться yahoo либо рамблером, или изучить соответствующий форум.
 <br>Надеюсь, что вы не зря потратили время и эта статья хотя бы чем-то смогла помочь вам отремонтировать двигатель. В следующей статье вы сможете узнать о том, как починить гараж либо гараж.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
