--- a/228.html
+++ b/228.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не зря потратили свое драгоценное время и настоящая статья смогла помочь вам решить вопрос. В следующей статье я напишу о том, как починить телефон samsung или йо йо.
 <br>Заходите к нам почаще, чтобы быть в курсе всех свежих событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
