--- a/234.html
+++ b/234.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки решили самостоятельно выполнять ремонт, то первым делом необходимо узнать о том, как чинить поддон душевой кабины. Для этих целей имеет смысл воспользоваться мэилру или яндексом, либо пересмотреть архивные подишивки журналов "Моделист-конструктор", "Домашняя мастерская", "Мастер-ломастер" и так далее.
 <br>Я надеюсь, что вы не зря потратили время и данная статья поможет вам сделать ремонт поддона душевой кабины. В следующей статье я расскажу о том, как починить газлифт или жк монитор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
