--- a/237.html
+++ b/237.html
@@ -62,6 +62,12 @@
 <br>Если вы все же решили самостоятельно заниматься ремонтом, то сначала нужно узнать о том, как заниматься починкой обуви. Для этой цели можно воспользоваться каким-нибудь поисковиком, скажем, mail.ru или рамблером, либо почитать старые номера журналов "Юный техник", "Домашний умелец" и т.п., или изучить тематический форум или сообщество.
 <br>Я надеюсь, что эта статья хотя бы чем-нибудь поможет вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
