--- a/241.html
+++ b/241.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки приняли решение самому ремонтировать, то сперва наперво необходимо узнать о том, как заниматься починкой провода интернета. Для этой цели можно воспользоваться бингом, либо постараться найти ответ на этот вопрос на тематическом форуме или сообществе.
 <br>Надеюсь, что вы не зря потратили свое время и эта статья хотя бы чем-то помогла вам решить данную проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
