--- a/244.html
+++ b/244.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы решили самостоятельно делать починку, то сперва нужно раздобыть информацию о том, как чинить китайский телефон. Для этого можно воспользоваться rambler или yandex, или пролистать выпуски журналов наподобие "Ремонтируем все самому", "Домашний мастер", или зайти на специализированный форум.
 <br>Я думаю, что вы не зря потратили свое драгоценное время и настоящая статья смогла помочь вам починить китайский телефон.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
