--- a/245.html
+++ b/245.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому ремонтировать, то первым делом надо узнать о том, как выполнять ремонт кухонного смесителя. Для этого стоит воспользоваться поисковиком, или просмотреть старые подишивки журналов "Домашняя мастерская", "Моделист-конструктор" и т.д., либо почитать профильный форум.
 <br>Я надеюсь, что вы не зря потратили свое драгоценное время и данная статья хотя бы немного помогла вам отремонтировать кухонный смеситель. В следующий раз я расскажу о том, как починить стабилизатор или стабилизатор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
