--- a/246.html
+++ b/246.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение самому заниматься починкой, то сперва нужно раздобыть информацию о том, как заниматься ремонтом кухонного гарнитура. Для этих целей можно воспользоваться любым поисковиком, либо просмотреть подишивки журналов наподобие "Моделист-конструктор".
 <br>Думаю, что вы не зря потратили свои усилия и настоящая статья помогла вам решить этот вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
