--- a/247.html
+++ b/247.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самостоятельно заниматься починкой, то сначала необходимо раздобыть информацию о том, как чинить сумку. Для этого имеет смысл воспользоваться яхой или гуглом.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и эта статья хотя бы немного поможет вам отремонтировать сумку. В следующий раз я расскажу о том, как отремонтировать газ контроль или крышку ноутбука.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
