--- a/248.html
+++ b/248.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение собственными силами заниматься починкой, то сначала надо узнать о том, как ремонтировать теплицу. Для этого есть смысл воспользоваться рамблером, или посетить профильный форум.
 <br>Надеюсь, что настоящая статья поможет вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
