--- a/250.html
+++ b/250.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы приняли решение самостоятельно заниматься ремонтом, то первым делом надо раздобыть инфу о том, как чинить джойстик на псп. Для этих целей стоит воспользоваться поисковиком, скажем, mail.ru или yahoo.
 <br>Думаю, что вы не напрасно потратили свои усилия и настоящая статья смогла помочь вам решить данный вопрос. В следующей статье я напишу о том, как починить дверной замок или сенсор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
