--- a/253.html
+++ b/253.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самостоятельно заниматься ремонтом, то сперва надо раздобыть инфу о том, как ремонтировать пластмассовый бампер. Для этого можно воспользоваться каким-либо поисковиком, или позависать на тематическом форуме или сообществе.
 <br>Я думаю, что вы не напрасно потратили время и эта статья может помочь вам починить пластмассовый бампер. В следующий раз вы сможете прочесть о том, как отремонтировать подоконник либо подоконник.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
