--- a/260.html
+++ b/260.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки решили самому ремонтировать, то первым делом необходимо получить информацию о том, как ремонтировать дверной замок. Для этого стоит воспользоваться яндексом или гуглом, либо пересмотреть архивные выпуски журналов "Сам себе мастер", "Моделист-конструктор", "Домашняя мастерская" и т.п., или изучить профильный форум.
 <br>Я надеюсь, что вы не зря потратили усилия и настоящая статья может помочь вам решить вопрос. В следующий раз я расскажу о том, как починить dvd rom либо смеситель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
