--- a/261.html
+++ b/261.html
@@ -60,6 +60,12 @@
 <br>Если вы все же решили собственными руками выполнять ремонт, то сперва наперво надо раздобыть информацию о том, как ремонтировать сливной бачок унитаза. Для этих целей имеет смысл воспользоваться рамблером либо бингом.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и настоящая статья смогла помочь вам сделать починку сливного бачка унитаза. В следующий раз вы сможете прочесть о том, как отремонтировать тачпад либо тачпад.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
