--- a/262.html
+++ b/262.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение своими силами делать починку, то сперва надо получить информацию о том, как выполнять починку стиральной машины samsung. Для этого можно воспользоваться гуглом, либо пересмотреть старые выпуски журналов "Сам себе мастер", "Домашний мастер" и подобных, или поискать ответ на соответствующий вопрос на соответствующем форуме.
 <br>Я надеюсь, что данная статья хотя бы чем-то сможет помочь вам отремонтировать стиральную машину samsung.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
