--- a/264.html
+++ b/264.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение собственными руками заниматься починкой, то сначала есть смысл узнать о том, как ремонтировать блендер браун. Для этого стоит воспользоваться bing или рамблером, или зайти на профильный форум.
 <br>Я надеюсь, что настоящая статья сможет помочь вам починить блендер браун. В следующий раз вы сможете прочесть о том, как починить пластиковый бампер или пластиковый бампер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
