--- a/267.html
+++ b/267.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки приняли решение самостоятельно чинить, то первым делом есть смысл получить информацию о том, как заниматься ремонтом зонтика автомат. Для этих целей можно воспользоваться гуглом или бингом, либо пролистать выпуски журналов "Моделист-конструктор", "Умелый мастер" и так далее, или посетить тематический форум.
 <br>Думаю, что вы не напрасно потратили время и данная статья хотя бы чем-то поможет вам решить данную задачу. В следующий раз я расскажу о том, как починить дисплей либо дисплей.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
