--- a/269.html
+++ b/269.html
@@ -61,6 +61,12 @@
 <br>Если вы решили самостоятельно делать починку, то сначала необходимо узнать о том, как выполнять ремонт панели приборов. Для этой цели можно воспользоваться любым поисковиком, например, мэилру, или пролистать подишивки журналов "Домашняя мастерская" или "Мастер-ломастер", или посетить соответствующий форум.
 <br>Я надеюсь, что данная статья хотя бы чем-то смогла помочь вам починить панель приборов. В следующей статье я напишу о том, как отремонтировать рычажный кран либо блютуз.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
