--- a/273.html
+++ b/273.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили своими силами заниматься починкой, то сперва нужно получить информацию о том, как чинить кнопку. Для этого можно воспользоваться поисковиком, скажем, yahoo, или пересмотреть номера журналов типа "Чиним самостоятельно".
 <br>Я надеюсь, что вы не напрасно потратили свое время и настоящая статья сможет помочь вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
