--- a/275.html
+++ b/275.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самому чинить, то сперва стоит раздобыть инфу о том, как чинить шифер. Для этих целей можно воспользоваться yahoo или рамблером.
 <br>Я надеюсь, что эта статья сможет помочь вам выполнить починку шифера. В следующей статье я расскажу о том, как отремонтировать линолеум или прицеп.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
