--- a/276.html
+++ b/276.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все же приняли решение собственными руками чинить, то сперва наперво стоит получить информацию о том, как чинить замок. Для этого можно воспользоваться любым поисковиком, или пересмотреть архивные номера журналов наподобие "Домашний умелец", или создать тему на популярном сообществе.
 <br>Надеюсь, что вы не зря потратили время и эта статья хотя бы немного сможет помочь вам решить данную проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
