--- a/282.html
+++ b/282.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки решили самому чинить, то первым делом есть смысл узнать о том, как ремонтировать кровлю. Для этих целей стоит воспользоваться любым поисковиком, или пересмотреть подишивки журналов "Сам себе мастер", либо задать вопрос на популярном форуме.
 <br>Я надеюсь, что вы не напрасно потратили свое время и эта статья хотя бы чем-нибудь смогла помочь вам починить кровлю. В следующей статье я напишу о том, как отремонтировать диск либо покрышку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
