--- a/287.html
+++ b/287.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самому выполнять починку, то сначала необходимо узнать о том, как делать ремонт канализации. Для этой цели можно воспользоваться каким-нибудь поисковиком, скажем, rambler или yandex, или создать тему на соответствующем сообществе.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и эта статья хотя бы чем-нибудь может помочь вам выполнить починку канализации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
