--- a/290.html
+++ b/290.html
@@ -60,6 +60,12 @@
 <br>Если вы решили самому заниматься ремонтом, то сперва необходимо узнать о том, как заниматься починкой покрышки. Для этих целей есть смысл воспользоваться вашим любимым поисковиком, или пролистать старые выпуски журналов "Мастер-ломастер", "Моделист-конструктор", либо поискать ответ на данный вопрос на популярном сообществе.
 <br>Надеюсь, что вы не зря потратили свои усилия и данная статья поможет вам починить покрышку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
