--- a/202.html
+++ b/202.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самому ремонтировать, то сперва наперво нужно получить информацию о том, как чинить вертолет. Для этой цели можно воспользоваться гуглом или рамблером, или задать вопрос на форуме или сообществе.
 <br>Я думаю, что эта статья хотя бы чем-нибудь помогла вам решить эту задачу. В следующей статье я расскажу о том, как починить кулер или кулер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
