--- a/204.html
+++ b/204.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что эта статья хотя бы немного может помочь вам решить проблему. В следующий раз я напишу о том, как починить шаровый смеситель или хрущевку.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех последних событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
