--- a/206.html
+++ b/206.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что настоящая статья поможет вам отремонтировать молнию. В следующий раз я расскажу о том, как починить динамик или хрущевку.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
