--- a/207.html
+++ b/207.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не напрасно потратили свои усилия и эта статья поможет вам решить вопрос. В следующий раз я расскажу о том, как отремонтировать топливный бак или катализатор.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
