--- a/209.html
+++ b/209.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы приняли решение самому чинить, то первым делом надо узнать о том, как заниматься ремонтом чайника электрического. Для этой цели можно воспользоваться бингом.
 <br>Надеюсь, что вы не зря потратили усилия и эта статья хотя бы немного поможет вам решить задачу. В следующий раз я расскажу о том, как починить пластмассовый бампер или деревянный дом.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
