--- a/210.html
+++ b/210.html
@@ -61,6 +61,12 @@
 <br>Надеюсь, что настоящая статья сможет помочь вам сделать починку навигатора. В следующей статье вы сможете прочесть о том, как отремонтировать мобильный телефон либо дизель.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
