--- a/211.html
+++ b/211.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самостоятельно чинить, то сперва нужно узнать о том, как делать ремонт очков. Для этого имеет смысл воспользоваться поисковиком, например, мэилру, или посмотреть выпуски журналов типа "Сам себе мастер" или "Умелый мастер".
 <br>Я думаю, что вы не зря потратили усилия и эта статья хотя бы чем-то помогла вам починить очки.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
