--- a/212.html
+++ b/212.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что эта статья хотя бы чем-нибудь поможет вам отремонтировать собачку. В следующей статье я расскажу о том, как отремонтировать старый фундамент либо шкаф купе.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех свежих событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
