--- a/213.html
+++ b/213.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что эта статья хотя бы немного поможет вам починить колесо. 
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
