--- a/214.html
+++ b/214.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что вы не напрасно потратили свое драгоценное время и эта статья хотя бы немного поможет вам решить проблему. 
 <br>Заходите к нам еще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
