--- a/215.html
+++ b/215.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили своими силами заниматься ремонтом, то сперва наперво нужно раздобыть информацию о том, как заниматься ремонтом x3 корабля. Для этой цели можно воспользоваться рамблером или мэилру.
 <br>Я надеюсь, что настоящая статья хотя бы чем-нибудь сможет помочь вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
