--- a/216.html
+++ b/216.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не зря потратили время и настоящая статья хотя бы чем-нибудь помогла вам сделать починку блока розжига. В следующей статье я расскажу о том, как отремонтировать cd или сканер.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех актуальных событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
