--- a/218.html
+++ b/218.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки решили собственными руками выполнять ремонт, то первым делом необходимо узнать о том, как заниматься ремонтом монитора. Для этой цели есть смысл воспользоваться бингом, или задать вопрос на соответствующем сообществе или форуме.
 <br>Надеюсь, что настоящая статья хотя бы чем-нибудь поможет вам решить данную проблему. В следующий раз я напишу о том, как отремонтировать автоматический зонт или автоматический зонт.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
