--- a/219.html
+++ b/219.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не зря потратили свое время и эта статья поможет вам решить задачу. 
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
