--- a/220.html
+++ b/220.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не зря потратили усилия и настоящая статья поможет вам решить данный вопрос. В следующей статье вы сможете прочесть о том, как починить динамик на телефоне или ванну.
 <br>Заходите к нам еще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
