--- a/222.html
+++ b/222.html
@@ -62,6 +62,12 @@
 <br>Думаю, что вы не зря потратили усилия и настоящая статья поможет вам решить вопрос. В следующей статье вы сможете прочесть о том, как починить пульт от телевизора либо трубу.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
