--- a/223.html
+++ b/223.html
@@ -62,6 +62,12 @@
 <br>Если вы все же приняли решение самому чинить, то сперва стоит раздобыть информацию о том, как заниматься ремонтом турбины. Для этих целей стоит воспользоваться mail.ru или яхой, или создать тему на форуме.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и эта статья хотя бы чем-то помогла вам решить данный вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
