--- a/224.html
+++ b/224.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки решили самостоятельно чинить, то первым делом нужно раздобыть инфу о том, как заниматься починкой зеркала. Для этой цели можно воспользоваться yahoo.
 <br>Думаю, что вы не напрасно потратили время и настоящая статья хотя бы чем-нибудь поможет вам решить проблему. В следующий раз вы сможете узнать о том, как починить пульт или мфу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
