--- a/225.html
+++ b/225.html
@@ -64,6 +64,12 @@
 <br>Надеюсь, что вы не зря потратили свое время и настоящая статья хотя бы немного помогла вам решить проблему. В следующей статье вы сможете узнать о том, как отремонтировать датчик уровня топлива или электрочайник.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
