--- a/227.html
+++ b/227.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что вы не напрасно потратили свои усилия и данная статья хотя бы чем-нибудь помогла вам решить задачу. 
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех свежих событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
