--- a/229.html
+++ b/229.html
@@ -62,6 +62,12 @@
 <br>Думаю, что данная статья хотя бы чем-нибудь поможет вам решить задачу. В следующей статье вы сможете прочесть о том, как отремонтировать зонтик или бп.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех последних событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
