--- a/232.html
+++ b/232.html
@@ -61,6 +61,12 @@
 <br>Если вы все же приняли решение своими руками заниматься починкой, то первым делом нужно узнать о том, как чинить подошву. Для этой цели можно воспользоваться яндексом или мэилру, либо почитать выпуски журналов типа "Умелый мастер".
 <br>Я думаю, что вы не напрасно потратили свои усилия и эта статья хотя бы чем-нибудь поможет вам отремонтировать подошву.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
