--- a/233.html
+++ b/233.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение самому выполнять починку, то первым делом есть смысл раздобыть информацию о том, как заниматься ремонтом стиральной машинки. Для этого стоит воспользоваться mail.ru.
 <br>Я думаю, что вы не напрасно потратили свое драгоценное время и эта статья поможет вам отремонтировать стиральную машинку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
