--- a/235.html
+++ b/235.html
@@ -62,6 +62,12 @@
 <br>Думаю, что вы не зря потратили свое драгоценное время и эта статья хотя бы чем-нибудь помогла вам починить микроволновку. 
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
