--- a/236.html
+++ b/236.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что эта статья сможет помочь вам решить проблему. В следующий раз вы сможете узнать о том, как отремонтировать прикуриватель либо карбюратор.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
