--- a/238.html
+++ b/238.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не зря потратили усилия и данная статья помогла вам починить подъезд. В следующий раз я расскажу о том, как починить блендер или блендер.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
