--- a/240.html
+++ b/240.html
@@ -61,6 +61,12 @@
 <br>Я надеюсь, что данная статья хотя бы чем-то смогла помочь вам выполнить ремонт электродвигателя. В следующей статье я напишу о том, как отремонтировать звук на компьютере либо звук на компьютере.
 <br>Заходите к нам почаще, чтобы быть в курсе всех свежих событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
