--- a/242.html
+++ b/242.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение собственными силами чинить, то сперва нужно узнать о том, как заниматься починкой x3 корабля. Для этих целей можно воспользоваться поисковиком, скажем, google либо rambler, или пересмотреть подишивки журналов "Мастер-ломастер", или создать тему на соответствующем форуме или сообществе.
 <br>Думаю, что данная статья сможет помочь вам починить x3 корабль.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
