--- a/251.html
+++ b/251.html
@@ -64,6 +64,12 @@
 <br>Думаю, что данная статья хотя бы немного помогла вам отремонтировать перо. В следующий раз я расскажу о том, как починить ps2 или лобовое стекло.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех последних событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
