--- a/254.html
+++ b/254.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не напрасно потратили свое драгоценное время и данная статья может помочь вам отремонтировать газовый котел. В следующей статье я напишу о том, как починить кий или psp.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех новых событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
