--- a/255.html
+++ b/255.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что вы не зря потратили свои усилия и настоящая статья хотя бы чем-нибудь поможет вам отремонтировать ps2. В следующий раз вы сможете узнать о том, как отремонтировать люк или люк.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
