--- a/259.html
+++ b/259.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все же решили своими силами заниматься починкой, то сперва надо узнать о том, как заниматься починкой вспышки. Для этого можно воспользоваться yahoo, либо просмотреть старые выпуски журналов типа "Моделист-конструктор".
 <br>Надеюсь, что вы не напрасно потратили время и данная статья хотя бы чем-то смогла помочь вам отремонтировать вспышку. В следующий раз я расскажу о том, как починить usb или модем.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
