--- a/263.html
+++ b/263.html
@@ -63,6 +63,12 @@
 <br>Думаю, что данная статья может помочь вам решить данную проблему. В следующий раз я напишу о том, как отремонтировать бензонасос или бензонасос.
 <br>Заходите к нам почаще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
