--- a/266.html
+++ b/266.html
@@ -63,6 +63,12 @@
 <br>Думаю, что данная статья помогла вам починить iphone. В следующий раз я напишу о том, как отремонтировать ваз 2114 либо пульт дистанционного управления.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
