--- a/268.html
+++ b/268.html
@@ -60,6 +60,12 @@
 <br>Итак, если вы все же решили собственными силами выполнять ремонт, то сперва наперво стоит получить информацию о том, как выполнять ремонт крыши дома. Для этой цели стоит воспользоваться поисковиком, скажем, яндексом или мэилру, или посмотреть архивные подишивки журналов типа "Домашний умелец", или создать тему на специализированном сообществе либо форуме.
 <br>Я думаю, что вы не напрасно потратили свое драгоценное время и эта статья помогла вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
