--- a/271.html
+++ b/271.html
@@ -64,6 +64,12 @@
 <br>Думаю, что эта статья хотя бы немного смогла помочь вам отремонтировать домофон. 
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
