--- a/281.html
+++ b/281.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самому ремонтировать, то сперва нужно узнать о том, как чинить провод интернета. Для этих целей можно воспользоваться поисковиком, например, bing, или задать вопрос на форуме либо сообществе.
 <br>Я надеюсь, что вы не зря потратили свои усилия и эта статья хотя бы немного поможет вам починить провод интернета.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
