--- a/283.html
+++ b/283.html
@@ -62,6 +62,12 @@
 <br>Если вы все же приняли решение самому ремонтировать, то сперва необходимо раздобыть информацию о том, как ремонтировать футбольный мяч. Для этой цели имеет смысл воспользоваться поисковиком, скажем, mail.ru или rambler, либо просмотреть номера журналов "Чиним все самостоятельно" или "Домашняя мастерская", или пообщаться на тематическом сообществе или форуме.
 <br>Я думаю, что вы не зря потратили свое время и данная статья хотя бы немного помогла вам решить эту задачу. В следующий раз я напишу о том, как починить бп или пульт ду.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
