--- a/284.html
+++ b/284.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не напрасно потратили время и настоящая статья хотя бы немного смогла помочь вам отремонтировать сенсор на телефоне. В следующий раз вы сможете узнать о том, как отремонтировать телефон или музыкальный центр.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
