--- a/285.html
+++ b/285.html
@@ -62,6 +62,12 @@
 <br>Если вы все же решили самостоятельно чинить, то первым делом есть смысл раздобыть информацию о том, как чинить заднюю стойку. Для этого есть смысл воспользоваться поисковиком.
 <br>Я думаю, что вы не напрасно потратили время и данная статья помогла вам решить вопрос. В следующий раз я расскажу о том, как починить usb или вилку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
