--- a/286.html
+++ b/286.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили самому делать ремонт, то первым делом имеет смысл узнать о том, как делать починку шарового крана. Для этой цели можно воспользоваться любым поисковиком, например, yandex, или просмотреть подишивки журналов "Моделист-конструктор", "Мастер-ломастер", "Умелый мастер" и подобные.
 <br>Я надеюсь, что вы не зря потратили свои усилия и эта статья хотя бы немного поможет вам починить шаровой кран.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
