--- a/289.html
+++ b/289.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не напрасно потратили свои усилия и настоящая статья хотя бы чем-то смогла помочь вам починить бампер ваз 2114. В следующей статье я расскажу о том, как отремонтировать лазерный принтер либо потолок после протечки.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
