--- a/291.html
+++ b/291.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы приняли решение собственными силами ремонтировать, то сначала надо узнать о том, как заниматься починкой увлажнителя воздуха. Для этих целей есть смысл воспользоваться яндексом либо yahoo.
 <br>Я надеюсь, что вы не зря потратили свои усилия и данная статья хотя бы чем-нибудь помогла вам решить данный вопрос. В следующий раз вы сможете узнать о том, как починить велик либо iphone.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
