--- a/295.html
+++ b/295.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все таки решили собственными силами чинить, то первым делом надо узнать о том, как ремонтировать санузел. Для этой цели можно воспользоваться яндексом, или почитать старые выпуски журналов "Моделист-конструктор", "Чиним своими силами".
 <br>Я думаю, что вы не напрасно потратили свое драгоценное время и настоящая статья поможет вам починить санузел. В следующий раз вы сможете прочесть о том, как отремонтировать чемодан или катализатор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
