--- a/296.html
+++ b/296.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили самому делать ремонт, то сперва нужно раздобыть информацию о том, как ремонтировать зонт автомат. Для этих целей стоит воспользоваться каким-либо поисковиком, например, google либо yandex, или почитать подишивки журналов "Ремонтируем самостоятельно".
 <br>Я думаю, что вы не зря потратили время и эта статья хотя бы чем-то помогла вам решить этот вопрос. В следующий раз я расскажу о том, как отремонтировать балкон либо манометр.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
