--- a/297.html
+++ b/297.html
@@ -61,6 +61,12 @@
 <br>Если вы все же приняли решение собственными силами выполнять починку, то первым делом надо узнать о том, как выполнять ремонт вспышки. Для этих целей можно воспользоваться бингом, либо почитать архивные номера журналов наподобие "Домашняя мастерская" или "Домашний умелец", или изучить популярный форум.
 <br>Я надеюсь, что настоящая статья смогла помочь вам сделать ремонт вспышки. В следующей статье я расскажу о том, как отремонтировать рычажный кран либо бачок унитаза.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
